--- a/container-editor.html
+++ b/container-editor.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="wrapper-container-editor">
-		<div class="container-editor"></div>
+		<div class="container-editor" id="container-editor"></div>
 		<div class="control-panel">
 			<div class="color-picker">
 				<span class="color-picker-title">Цвет фона:</span>
